--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,12 @@ joblib = "^1.3.2"
 types-PyYAML = "^6.0.12.12"
 Flask = "^3.0.0"
 Flask-Cors = "^4.0.0"
+black = "^23.10.1"
+isort = "^5.12.0"
+mypy = "^1.6.1"
 
+[tool.isort]
+profile = "black"
 
 [build-system]
 requires = ["poetry-core"]
