fix(ci/cd): add mypy param to fix error on modules

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,4 +26,4 @@ jobs:
           branch: ${{ github.ref }}
 
       - run: pip install mypy
-      - run: mypy --ignore-missing-imports .
+      - run: mypy --no-namespace-packages .
