fix(ci/cd): add back mypy ignore missing imports flag

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,4 +26,4 @@ jobs:
           branch: ${{ github.ref }}
 
       - run: pip install mypy
-      - run: mypy --no-namespace-packages .
+      - run: mypy --no-namespace-packages --ignore-missing-imports .
