--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,4 +26,4 @@ jobs:
           branch: ${{ github.ref }}
 
       - run: pip install mypy
-      - run: mypy --no-namespace-packages --ignore-missing-imports .
+      - run: mypy . --install-types --non-interactive --ignore-missing-imports --no-namespace-packages
