--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,9 @@ mypy = "^1.6.1"
 [tool.isort]
 profile = "black"
 
+[mypy-yaml.*]
+ignore_missing_imports = True
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
