--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,17 +12,12 @@ repos:
         exclude: "notebooks"
 
 -   repo: https://github.com/psf/black
-    rev: 21.9b0
+    rev: 21.10b0
     hooks:
     -   id: black
         args: [--safe]
         files: .
-
--   repo: https://github.com/PyCQA/flake8
-    rev: 3.9.2
-    hooks:
-    -   id: flake8
-        language_version: python3
+        additional_dependencies: [click==7.1.2]
 
 -   repo: https://github.com/pycqa/isort
     rev: 5.12.0
@@ -34,4 +29,4 @@ repos:
     rev: v0.910
     hooks:
     -   id: mypy
-        args: []
+        args: [--ignore-missing-imports, --explicit-package-bases, --namespace-packages, --install-types, --non-interactive]
