--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,6 +10,8 @@ jobs:
       - uses: psf/black@stable
         with:
           jupyter: true
+          version: "23.11.0"
+          args: ". --line-length 100"
 
       - uses: isort/isort-action@v1
 
