--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,8 +14,12 @@ repos:
 -   repo: https://github.com/psf/black
     rev: 23.11.0
     hooks:
-    -   id: black
+    -   id: black-jupyter
         files: .
+        args:
+        - --check
+        - --line-length=100
+        language_version: python3.10.9
 
 -   repo: https://github.com/pycqa/isort
     rev: 5.12.0
