--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,23 +12,28 @@ pandas = "^2.1.2"
 mlflow = "^2.8.0"
 notebook = "^7.0.6"
 numpy = "^1.26.1"
-sklearn = "^0.0.post10"
 scikit-learn = "^1.3.2"
 matplotlib = "^3.8.1"
 python-box = "^7.1.1"
 PyYAML = "^6.0.1"
 tqdm = "^4.66.1"
 ensure = "^1.0.3"
-joblib = "^1.3.2"
 types-PyYAML = "^6.0.12.12"
 Flask = "^3.0.0"
 Flask-Cors = "^4.0.0"
-black = "^23.10.1"
+black = {extras = ["jupyter"], version = "^23.11.0"}
 isort = "^5.12.0"
 mypy = "^1.6.1"
+pre-commit = "^3.5.0"
+joblib = "^1.3.2"
+flake8 = "^6.1.0"
+python-dotenv = "^1.0.0"
 
 [tool.isort]
 profile = "black"
+
+[tool.black]
+line-length = 100
 
 [build-system]
 requires = ["poetry-core"]
